k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yarvis-backend
  namespace: apps-yarvis
  labels:
    app.kubernetes.io/name: yarvis
    app.kubernetes.io/component: backend
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
    - name: ws
      port: 3000
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: yarvis
    app.kubernetes.io/component: backend
